Big refactoring!!!!
1. remove useless lines, functions and variables.
2. some renames.
3. typo fixes.